src/test/deca/context/valid/self/addition.deca
{
println("Addition de 5+3+4 : ", 5+4+3);
println("Addition de 5+7-20 : ", 5+7-20);
}