src/test/deca/context/invalid/self/while.deca
{
    while (2){
        println("aie");
    }
}